--- a/index.html
+++ b/index.html
@@ -10,66 +10,66 @@
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Mercury</th>
+      <th>Moon</th>
+      <th>Mars</th>
+      <th>Neptune</th>
     </tr>
     <tr>
-      <td>Images of ??</td>
+      <td>Images of Planet</td>
       <td><img src="images/planet_1.png" alt="?"></td>
       <td><img src="images/planet_2.png" alt="?"></td>
       <td><img src="images/planet_3.png" alt="?"></td>
       <td><img src="images/planet_4.png" alt="?"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Mass (10^24kg)</td>
+      <td>0.330</td>
+      <td>0.073</td>
+      <td>0.642</td>
+      <td>102</td>
     </tr>
     <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Gravity(m/s^2)</td>
+      <td>3.7</td>
+      <td>1.6</td>
+      <td>3.7</td>
+      <td>11.0</td>
     </tr>
     <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Length of Day</td>
+      <td>4222.6</td>
+      <td>708.7</td>
+      <td>24.7</td>
+      <td>16.1</td>
     </tr>
     <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Distance from the Sun</td>
+      <td>57.9</td>
+      <td>0.384*</td>
+      <td>228.0</td>
+      <td>2867.0</td>
     </tr>
     <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Mean Temperature (degrees)</td>
+      <td>167</td>
+      <td>-20</td>
+      <td>-65</td>
+      <td>-200</td>
     </tr>
     <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Surface Pressure(bars)</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.01</td>
+      <td>Unknown*</td>
     </tr>
     <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Ring System?</td>
+      <td>Yes</td>
+      <td>No</td>
+      <td>No</td>
+      <td>Yes</td>
     </tr>
   </table>
 </body>
