--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </tr>
     <tr>
       <td>Images of Planet</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td><img src="" alt="Mercury"></td>
+      <td><img src="" alt="Moon"></td>
+      <td><img src="images/planet_3.png" alt="Mars"></td>
+      <td><img src="images/planet_4.png" alt="Neptune"></td>
     </tr>
     <tr>
       <td>Mass (10^24kg)</td>
