--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
     </tr>
     <tr>
       <td>Images of Planet</td>
+      <style> 
+        img{
+          width: 250px;
+          height: 250px;
+      } 
+      </style>
       <td><img src="media/mercury.jpeg"alt="Mercury"></td>
       <td><img src="media/moon.jpeg"alt="Moon"></td>
       <td><img src="media/mars.jpeg"alt="Mars"></td>
       <td><img src="media/neptune.jpeg"alt="Neptune"></td>
+
     </tr>
     <tr>
       <td>Mass (10^24kg)</td>
