--- a/index.html
+++ b/index.html
@@ -24,49 +24,49 @@
       <td><img src="media/neptune.jpeg"alt="Neptune"></td>
 
     </tr>
-    <tr>
+    <tr class="facts">
       <td>Mass (10^24kg)</td>
       <td>0.330</td>
       <td>0.073</td>
       <td>0.642</td>
       <td>102</td>
     </tr>
-    <tr>
+    <tr class="facts">
       <td>Gravity(m/s^2)</td>
       <td>3.7</td>
       <td>1.6</td>
       <td>3.7</td>
       <td>11.0</td>
     </tr>
-    <tr>
+    <tr class="facts">
       <td>Length of Day</td>
       <td>4222.6</td>
       <td>708.7</td>
       <td>24.7</td>
       <td>16.1</td>
     </tr>
-    <tr>
+    <tr class="facts">
       <td>Distance from the Sun</td>
       <td>57.9</td>
       <td>0.384*</td>
       <td>228.0</td>
       <td>2867.0</td>
     </tr>
-    <tr>
+    <tr class="facts"></tr>
       <td>Mean Temperature (degrees)</td>
       <td>167</td>
       <td>-20</td>
       <td>-65</td>
       <td>-200</td>
     </tr>
-    <tr>
+    <tr class="facts">
       <td>Surface Pressure(bars)</td>
       <td>0</td>
       <td>0</td>
       <td>0.01</td>
       <td>Unknown*</td>
     </tr>
-    <tr>
+    <tr class="facts">
       <td>Ring System?</td>
       <td>Yes</td>
       <td>No</td>
