--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <td>228.0</td>
       <td>2867.0</td>
     </tr>
-    <tr class="facts"></tr>
+    <tr class="facts">
       <td>Mean Temperature (degrees)</td>
       <td>167</td>
       <td>-20</td>
